SearchPage created and almost done

--- a/src/assets/sassStyles/_variables.scss
+++ b/src/assets/sassStyles/_variables.scss
@@ -1,6 +1,6 @@
 $boxBackgrundColor: rgba(17, 34, 51, .9);
 $textColor: #fff;
-$backgrundColor: #000;
+$darkColor: #000;
 $shadowColor: #bebebe;
 $littleDarkColor: #555;
 $headColor: gold;
