--- a/src/index.scss
+++ b/src/index.scss
@@ -1,6 +1,7 @@
 @import 'assets/sassStyles/variables';
 @import 'assets/sassStyles/config';
 @import 'assets/sassStyles/LandingPage';
+@import 'assets/sassStyles/SearchPage';
 
 body {
   margin: 0;
