--- a/src/assets/sassStyles/_config.scss
+++ b/src/assets/sassStyles/_config.scss
@@ -8,6 +8,12 @@
   -webkit-tap-highlight-color: transparent;
 }
 
+@mixin xs-screen {
+  @media screen and(min-width:400px) {
+    @content;
+  }
+}
+
 @mixin sm-screen {
   @media screen and(min-width:576px) {
     @content;
