--- a/src/index.scss
+++ b/src/index.scss
@@ -2,28 +2,25 @@
 @import 'assets/sassStyles/config';
 @import 'assets/sassStyles/LandingPage';
 @import 'assets/sassStyles/SearchPage';
+@import 'assets/sassStyles/responsive';
 
 body {
-  margin: 0;
   font-family:'Montserrat', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: powderblue;
+  background-color: $boxBackgrundColor;
   background-image: url('https://images.pexels.com/photos/220201/pexels-photo-220201.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1');
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
   color:$textColor;
+  padding: 1rem;
   width: 100vw;
   height: 100vh;
   font-weight: normal;
   display: flex;
   justify-content: center;
   align-items: center;
-}
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
 }
