--- a/src/assets/sassStyles/_responsive.scss
+++ b/src/assets/sassStyles/_responsive.scss
@@ -25,10 +25,164 @@
     }
   }
 }
+
 @include sm-screen {
-  .search_container {
-    .search_modal {
+  .main_weather {
+    .weather_intro {
+      width: 100%;
+
+      h2 {
+        text-transform: capitalize;
+        font-size: 1.35rem;
+        text-align: center;
+        color: $textColor;
+
+        #city {
+          color: $headColor;
+          text-transform: uppercase;
+        }
+      }
+    }
+
+    .weather_info {
+      font-size: 1.3rem;
+    }
+
+    .weather_type {
+      .show_weather_type {
+        #weather_type_text {
+          font-size: 1.8rem;
+        }
+      }
+    }
+
+    .search_container {
+      .search_modal {
+        padding: 1rem 3rem;
+      }
+    }
+  }
+
+  .weekly_weather {
+    transform: translateY(60%);
+
+    .week_text {
+      padding: 1rem 2rem 2rem;
+    }
+
+    .next_week_weathers {
       padding: 1rem 3rem;
+      gap: 2rem;
+
+      .next_week_weather {
+        width: 15rem;
+
+        .next_high_low {
+          font-size: 1rem;
+        }
+
+        .next_type {
+          .next_type_img {
+            width: 2rem;
+            height: 2rem;
+          }
+        }
+      }
+    }
+  }
+}
+
+@include md-screen {
+  .main_weather {
+    .weather_intro {
+      width: 100%;
+
+      h2 {
+        text-transform: capitalize;
+        font-size: 1.9rem;
+        text-align: center;
+        color: $textColor;
+
+        #city {
+          color: $headColor;
+          text-transform: uppercase;
+        }
+      }
+    }
+
+    .weather_info {
+      width: 80%;
+    }
+
+    .weather_type {
+      .show_weather_type {
+        #weather_type_text {
+          font-size: 2.2rem;
+        }
+      }
+    }
+  }
+
+  .weekly_weather {
+    .next_week_weathers {
+      padding: 1rem 5rem;
+      gap: 4rem;
+      font-size: 1.2rem;
+
+      .next_week_weather {
+        width: 20rem;
+        padding: 1rem 2rem;
+      }
+    }
+  }
+}
+
+@include lg-screen {
+  .main_weather {
+    .weather_info {
+      flex-direction: row;
+      padding: 3rem 0;
+      width: 100%;
+
+      .date {
+        border-bottom: none;
+        padding: 2.5rem 2rem;
+        border-right: 1px solid $shadowColor;
+      }
+
+      .weather_temp {
+        border-bottom: none;
+        padding: .9rem 2rem;
+        border-right: 1px solid $shadowColor;
+      }
+
+      .wind {
+        padding: 2rem;
+      }
+
+    }
+
+  }
+
+  .weekly_weather {
+    .next_week_weathers {
+      font-size: 1.5rem;
+      padding: 1rem 7rem;
+      gap: 5rem;
+
+      .next_week_weather {
+        width: 25rem;
+      }
+    }
+  }
+}
+
+@include xlg-screen {
+  .weekly_weather {
+    .next_week_weathers {
+      .next_week_weather {
+        padding: 1rem 3rem;
+      }
     }
   }
 }
