LoadingPage created and final touches

--- a/src/index.scss
+++ b/src/index.scss
@@ -1,5 +1,6 @@
 @import 'assets/sassStyles/variables';
 @import 'assets/sassStyles/config';
+@import 'assets/sassStyles/LoadingPage';
 @import 'assets/sassStyles/LandingPage';
 @import 'assets/sassStyles/SearchPage';
 @import 'assets/sassStyles/NextTwoDays';
