--- a/src/assets/sassStyles/_LoadingPage.scss
+++ b/src/assets/sassStyles/_LoadingPage.scss
@@ -1,7 +1,4 @@
 .loadingPage{
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+  @include flexStyle(column, center, center);
   font-size: 1.5rem;
 }
