--- a/src/assets/sassStyles/_SearchPage.scss
+++ b/src/assets/sassStyles/_SearchPage.scss
@@ -10,9 +10,7 @@
     background: $textColor;
     color: $darkColor;
     padding: 1rem;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+    @include flexStyle(row, space-between, center);
     gap: 1rem;
     transform: translateY(-100%);
     transition: 0.4s;
@@ -50,9 +48,7 @@
 
     #search_form {
       position: relative;
-      display: flex;
-      justify-content: center;
-      align-items: center;
+      @include flexStyle(row, center, center);
       gap: .2rem;
       width: 15rem;
       max-width: 25rem;
